--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#f00</color>
+    <color name="alomost_black">#222</color>
+    <color name="orange">#ff8c00</color>
 </resources>
